<resources>
    <string name="app_name">HMail</string>

    <string name="login_name">用户名</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="rem_pw">记住密码</string>
    <string name="fg_pw">忘记密码</string>
    <string name="df_js">这个人很懒，什么也没有留下。</string>
    <string name="retrieve">&#160; &#160; 由于经费有限，没有手机号及邮箱认证.\n&#160; &#160; 若忘记密码，请联系管理员删除用户信息，重新注册.</string>


</resources>
